--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "faunadb": "^4.6.0",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
