setup stripe js

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ GITHUB_SECRET=
 FAUNADB_SERVER_SECRET=
 
 JWT_SIGNING_PRIVATE_KEY=
+
+STRIPE_SUCCESS_URL=
+STRIPE_CANCEL_URL=
+NEXT_PUBLIC_STRIPE_PUBLIC_KEY=
