--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,19 @@
-STRIPE_API_KEY=
-
+# Github
 GITHUB_ID=
 GITHUB_SECRET=
 
+# Fauna
 FAUNADB_SERVER_SECRET=
 
+# Next Auth
 JWT_SIGNING_PRIVATE_KEY=
 
+# Stripe
+STRIPE_API_KEY=
 STRIPE_SUCCESS_URL=
 STRIPE_CANCEL_URL=
 STRIPE_WEBHOOK_SECRET=
-
 NEXT_PUBLIC_STRIPE_PUBLIC_KEY=
+
+# Primisc CMS
+PRISMIC_ACCESS_TOKEN=
