--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "^6.7.1",
     "@stripe/stripe-js": "^1.36.0",
     "axios": "^0.27.2",
     "faunadb": "^4.6.0",
