--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "faunadb": "^4.6.0",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
+    "prismic-dom": "^2.2.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
