--- a/package.json
+++ b/package.json
@@ -23,10 +23,16 @@
     "stripe": "^10.7.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.19.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/node": "^18.7.8",
     "@types/react": "^18.0.17",
+    "babel-jest": "^29.2.0",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "jest": "^29.2.0",
+    "jest-dom": "^4.0.0",
     "typescript": "^4.7.4"
   }
 }
