--- a/package.json
+++ b/package.json
@@ -24,16 +24,18 @@
     "stripe": "^10.7.0"
   },
   "devDependencies": {
-    "@testing-library/dom": "^8.19.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/dom": "^7.31.2",
+    "@testing-library/jest-dom": "^5.13.0",
+    "@testing-library/react": "^11.2.7",
     "@types/node": "^18.7.8",
     "@types/react": "^18.0.17",
-    "babel-jest": "^29.2.0",
+    "babel-jest": "^27.0.2",
+    "identity-obj-proxy": "^3.0.0",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
-    "jest": "^29.2.0",
+    "jest": "^27.0.4",
     "jest-dom": "^4.0.0",
+    "ts-jest": "^27.0.4",
     "typescript": "^4.7.4"
   }
 }
